Fix: aligning sidebar icons, photo credit

--- a/src/sass/abstracts/_spacing.scss
+++ b/src/sass/abstracts/_spacing.scss
@@ -10,4 +10,4 @@ $flow-spacer-large: 2.6em;
 $flow-spacer-nontitletext: 0.6em;
 $column-gap: 1.15em;
 $wide-column-gap: 2.75em;
-$gap-from-bottom: 5vh;
+$gap-from-bottom: 2vh;
